# WizBulb_Rust

./: Cargo.toml
src/: error_parser.rs  get_bulb_statut.rs  ip_from_mac.rs  main.rs  response_des.rs  scene_id.rs  send_parameters.rs
