[package]
name = "Wiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.188"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }